--- a/src/Stackoverflow_Dark/sections/10/config.json
+++ b/src/Stackoverflow_Dark/sections/10/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "chat.stackoverflow.com"
+    "graphicdesign.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
