--- a/src/Stackoverflow_Dark/sections/12/config.json
+++ b/src/Stackoverflow_Dark/sections/12/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [
-    "dba.stackexchange.com"
+  "domains": [],
+  "regexps": [
+    "^https?://((?!(academia|dba|electronics|meta|tex)).*\\.)?stackexchange.com.*"
   ],
-  "regexps": [],
   "code": ""
 }
