--- a/src/Stackoverflow_Dark/sections/13/config.json
+++ b/src/Stackoverflow_Dark/sections/13/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
-  "urlPrefixes": [
-    "https://stackoverflow.com/documentation"
+  "urlPrefixes": [],
+  "domains": [
+    "ja.meta.stackoverflow.com"
   ],
-  "domains": [],
   "regexps": [],
   "code": ""
 }
