--- a/src/Stackoverflow_Dark/sections/14/config.json
+++ b/src/Stackoverflow_Dark/sections/14/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "electronics.stackexchange.com"
+    "mathoverflow.net"
   ],
   "regexps": [],
   "code": ""
