--- a/src/Stackoverflow_Dark/sections/17/config.json
+++ b/src/Stackoverflow_Dark/sections/17/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "es.meta.stackoverflow.com"
+    "photo.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
