--- a/src/Stackoverflow_Dark/sections/18/config.json
+++ b/src/Stackoverflow_Dark/sections/18/config.json
@@ -2,7 +2,8 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "graphicdesign.stackexchange.com"
+    "portuguese.meta.stackexchange.com",
+    "portuguese.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
