--- a/src/Stackoverflow_Dark/sections/19/config.json
+++ b/src/Stackoverflow_Dark/sections/19/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "ja.stackoverflow.com"
+    "pt.stackoverflow.com"
   ],
   "regexps": [],
   "code": ""
