--- a/src/Stackoverflow_Dark/sections/2/config.json
+++ b/src/Stackoverflow_Dark/sections/2/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [],
-  "regexps": [
-    "^https?://((?!(academia|dba|electronics|meta|tex)).*\\.)?stackexchange.com.*"
+  "domains": [
+    "chat.stackoverflow.com"
   ],
+  "regexps": [],
   "code": ""
 }
