--- a/src/Stackoverflow_Dark/sections/22/config.json
+++ b/src/Stackoverflow_Dark/sections/22/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "meta.stackoverflow.com"
+    "ru.stackoverflow.com"
   ],
   "regexps": [],
   "code": ""
