--- a/src/Stackoverflow_Dark/sections/25/config.json
+++ b/src/Stackoverflow_Dark/sections/25/config.json
@@ -2,8 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "portuguese.meta.stackexchange.com",
-    "portuguese.stackexchange.com"
+    "salesforce.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
