--- a/src/Stackoverflow_Dark/sections/27/config.json
+++ b/src/Stackoverflow_Dark/sections/27/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "pt.meta.stackoverflow.com"
+    "skeptics.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
