--- a/src/Stackoverflow_Dark/sections/28/config.json
+++ b/src/Stackoverflow_Dark/sections/28/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "rpg.stackexchange.com"
+    "softwareengineering.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
