--- a/src/Stackoverflow_Dark/sections/29/config.json
+++ b/src/Stackoverflow_Dark/sections/29/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "ru.stackoverflow.com"
+    "stackapps.com"
   ],
   "regexps": [],
   "code": ""
