--- a/src/Stackoverflow_Dark/sections/3/config.json
+++ b/src/Stackoverflow_Dark/sections/3/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "tex.stackexchange.com"
+    "askubuntu.com"
   ],
   "regexps": [],
   "code": ""
