--- a/src/Stackoverflow_Dark/sections/31/config.json
+++ b/src/Stackoverflow_Dark/sections/31/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "salesforce.stackexchange.com"
+    "superuser.com"
   ],
   "regexps": [],
   "code": ""
