--- a/src/Stackoverflow_Dark/sections/35/config.json
+++ b/src/Stackoverflow_Dark/sections/35/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "stackapps.com"
+    "wordpress.stackexchange.com"
   ],
   "regexps": [],
   "code": ""
