--- a/src/Stackoverflow_Dark/sections/36/config.json
+++ b/src/Stackoverflow_Dark/sections/36/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [],
-  "regexps": [
-    "^https?://stackexchange\\.com.*"
+  "domains": [
+    "data.stackexchange.com"
   ],
+  "regexps": [],
   "code": ""
 }
