--- a/src/Stackoverflow_Dark/sections/37/config.json
+++ b/src/Stackoverflow_Dark/sections/37/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [
-    "superuser.com"
+  "domains": [],
+  "regexps": [
+    "^https?://((android|photo|programmers|wordpress)\\.)?stackexchange\\.com.*"
   ],
-  "regexps": [],
   "code": ""
 }
