--- a/src/Stackoverflow_Dark/sections/41/config.json
+++ b/src/Stackoverflow_Dark/sections/41/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "data.stackexchange.com"
+    "stackoverflow.com"
   ],
   "regexps": [],
   "code": ""
