--- a/src/Stackoverflow_Dark/sections/5/config.json
+++ b/src/Stackoverflow_Dark/sections/5/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
-  "urlPrefixes": [],
-  "domains": [],
-  "regexps": [
-    "^https?://((android|photo|programmers|wordpress)\\.)?stackexchange\\.com.*"
+  "urlPrefixes": [
+    "https://stackoverflow.com/documentation"
   ],
+  "domains": [],
+  "regexps": [],
   "code": ""
 }
