--- a/src/Stackoverflow_Dark/sections/26/config.json
+++ b/src/Stackoverflow_Dark/sections/26/config.json
@@ -2,7 +2,7 @@
   "urls": [],
   "urlPrefixes": [],
   "domains": [
-    "pt.stackoverflow.com"
+    "serverfault.com"
   ],
   "regexps": [],
   "code": ""
