--- a/src/Stackoverflow_Dark/sections/4/config.json
+++ b/src/Stackoverflow_Dark/sections/4/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [],
-  "regexps": [
-    "^https?://((academia|chess|english|meta|movies|salesforce|skeptics|judaism|ux)\\.)?stackexchange\\.com.*"
+  "domains": [
+    "dba.stackexchange.com"
   ],
+  "regexps": [],
   "code": ""
 }
