--- a/src/Stackoverflow_Dark/sections/40/config.json
+++ b/src/Stackoverflow_Dark/sections/40/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [
-    "wordpress.stackexchange.com"
+  "domains": [],
+  "regexps": [
+    "^https?://((android|apple|dba|gamedev|movies|salesforce|scifi|security|tex|ux|webapps|webmasters)\\.)?stackexchange\\.com.*"
   ],
-  "regexps": [],
   "code": ""
 }
