--- a/src/Stackoverflow_Dark/sections/6/config.json
+++ b/src/Stackoverflow_Dark/sections/6/config.json
@@ -1,9 +1,9 @@
 {
   "urls": [],
   "urlPrefixes": [],
-  "domains": [],
-  "regexps": [
-    "^https?://((photo|security|wordpress)\\.)?stackexchange\\.com.*"
+  "domains": [
+    "electronics.stackexchange.com"
   ],
+  "regexps": [],
   "code": ""
 }
